Bug 1887930 - Always collapse the range when roots are different and one of the roots is an UA shadow root r=jjaschke,smaug,dom-core

UA shadow root is implementation details, which shouldn't be exposed.
So having a range where one point is in UA shadow DOM, and the
other point is in a different root doesn't shouldn't be allowed.

This was also the same behavior when we didn't have the ShadowDOM
selection support.

Differential Revision: https://phabricator.services.mozilla.com/D206245